all articles page done

--- a/single-article.html
+++ b/single-article.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/single-article.css">
     <link rel="stylesheet" href="/css/breadcrumbs.css">
+    <link rel="stylesheet" href="/css/filtering.css">
     <title>Próximo</title>
 </head>
 <body>
@@ -18,10 +19,11 @@
         <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
         <ul class="menu">
-          <li><a href="#work">Our Work</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#careers">Careers</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="/index.html">Próximo</a></li>
+          <li><a href="/all-articles.html">Articles</a></li>
+          <li><a href="/about.html">about</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+          
  
         </ul>
       </header>
@@ -41,9 +43,9 @@
         </div>
     </div>
       <nav class="breadcrumb-items">
-        <a class="breadcrumb-item" href="/index.html">home</a>
-        <a class="breadcrumb-item" href="#">articles</a>
-        <a class="breadcrumb-item active" href="/single-article.html">article</a>
+        <a class="breadcrumb-item" href="/index.html">Próximo</a>
+        <a class="breadcrumb-item" href="/all-articles.html">All articles</a>
+        <a class="breadcrumb-item active" href="/single-article.html">Single article</a>
       </nav><!-- .breadcrumb-items -->
 
       <div class="fiveminreadwrapper">
