added landing page and styles

--- a/single-article.html
+++ b/single-article.html
@@ -15,11 +15,11 @@
 <body>
 
     <header class="header">
-        <a href="/index.html" class="logo"><strong>próximo</strong></a>
+        <a href="/landingpage.html" class="logo"><strong>próximo</strong></a>
         <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
         <ul class="menu">
-          <li><a href="/index.html">Próximo</a></li>
+          <li><a href="/landingpage.html">Próximo</a></li>
           <li><a href="/all-articles.html">Articles</a></li>
           <li><a href="/about.html">about</a></li>
           <li><a href="/contact.html">Contact</a></li>
@@ -43,7 +43,7 @@
         </div>
     </div>
       <nav class="breadcrumb-items">
-        <a class="breadcrumb-item" href="/index.html">Próximo</a>
+        <a class="breadcrumb-item" href="/landingpage.html">Próximo</a>
         <a class="breadcrumb-item" href="/all-articles.html">All articles</a>
         <a class="breadcrumb-item active" href="/single-article.html">Single article</a>
       </nav><!-- .breadcrumb-items -->
