--- a/all-articles.html
+++ b/all-articles.html
@@ -18,11 +18,11 @@
 <body>
 
     <header class="header">
-        <a href="/index.html" class="logo"><strong>próximo</strong></a>
+        <a href="/landingpage.html" class="logo"><strong>próximo</strong></a>
         <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
         <ul class="menu">
-          <li><a href="/index.html">Próximo</a></li>
+          <li><a href="/landingpage.html">Próximo</a></li>
           <li><a href="/all-articles.html">Articles</a></li>
           <li><a href="/about.html">about</a></li>
           <li><a href="/contact.html">Contact</a></li>
@@ -44,7 +44,7 @@
       <main class="wrapper">
       <div class="breadcrumbs">
         <nav class="breadcrumb-items">
-            <a class="breadcrumb-item" href="/index.html">Próximo</a>
+            <a class="breadcrumb-item" href="/landingpage.html">Próximo</a>
             <a class="breadcrumb-item active" href="/all-articles.html">All articles</a>
           </nav><!-- .breadcrumb-items -->
       </div>
@@ -76,6 +76,7 @@
                 <li>
                   <label for="Instruments">Instruments</label>
                 </li>
+                <h4>Favorites</h4>
                 <li>
                   <label for="Rock">Rock</label>
                 </li>
