added overlay and cta buttons on all articles

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width-device-width, initial-scale=1">
 	<!--this sets the responsive layout-->
 	
-	<link href='/css/landingpage.css' rel='stylesheet' type='text/css'>
+	<link href='/css/welcomepage.css' rel='stylesheet' type='text/css'>
 	<title>Vintage Lines</title>
 <body>
 	<div id="header">
