added load more btn, and changed styles

--- a/all-articles.html
+++ b/all-articles.html
@@ -424,6 +424,12 @@
               </ol>
             </div>
           </section>
+
+          <div clas="container">
+            <div class="grid-row">
+              <a href="" class="btn load-btn btn-gradient">Load more articles</a>
+            </div>
+          </div>
          
 
 
