--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,8 @@
     <main class="wrapper">
         <article>
             <div class="container">
+
+              <h1>We would love to hear from you!</h1>
                 <form action="/action_page.php">
                   <label for="fname">Name</label>
                   <input type="text" id="fname" name="name" placeholder="Your name">
