added gradients to buttons

--- a/landingpage.html
+++ b/landingpage.html
@@ -24,7 +24,7 @@
         <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
         <ul class="menu">
-          <li><a href="/landingpage.html">Próximo</a></li>
+          <li><a class="active" href="/landingpage.html">Próximo</a></li>
           <li><a href="/all-articles.html">Articles</a></li>
           <li><a href="/about.html">About</a></li>
           <li><a href="/contact.html">Contact</a></li>
@@ -145,7 +145,7 @@ C4.622,10.623,2.833,8.831,2.845,6.631L2.845,6.631z" />
                    <h2 class="">Get</h2>
                    <p class=""><strong class="gradient">P</strong>róximo</p>
                    <h2 class="">Content in your inbox!</h2>
-                   <a class="btn" href="/subscribe.html">subscribe</a>
+                   <a class="btn btn-gradient" href="/subscribe.html">subscribe</a>
                  </div>
                 
                </div>
