--- a/subscribe.html
+++ b/subscribe.html
@@ -85,7 +85,7 @@ C4.622,10.623,2.833,8.831,2.845,6.631L2.845,6.631z" />
                    <p class=""><strong>P</strong>róximo</p>
                    <h2 class="">Content in your inbox!</h2>
                    <input type="text" placeholder="email@email.com">
-                   <a class="btn" href="/thankyou.html">subscribe</a>
+                   <a class="btn btn-gradient" href="/thankyou.html">subscribe</a>
                  </div>
                 
                </div>
