--- a/thankyoucontact.html
+++ b/thankyoucontact.html
@@ -17,7 +17,6 @@
 
   <header class="header">
     <a href="/landingpage.html" class="logo"><strong>próximo</strong></a>
-    <input class="searchbar" type="text" placeholder="What you looking for?"> <i class=" searchButton fa fa-search"></i>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
@@ -85,7 +84,7 @@ C4.622,10.623,2.833,8.831,2.845,6.631L2.845,6.631z" />
                    <h2 class="">Thank you for your message!</h2>
                    <p>We will get back to you asap.</p>
             
-                   <a class="btn" href="/landingpage.html">Go to próximo!</a>
+                   <a class="btn btn-gradient" href="/landingpage.html">Go to próximo!</a>
                  </div>
                 
                </div>
