--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     <ul class="menu">
       <li><a href="/landingpage.html">Próximo</a></li>
       <li><a href="/all-articles.html">Articles</a></li>
-      <li><a href="/about.html">About</a></li>
+      <li><a class="active" href="/about.html">About</a></li>
       <li><a href="/contact.html">Contact</a></li>
      
 
