--- a/all-articles.html
+++ b/all-articles.html
@@ -29,7 +29,7 @@
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
       <li><a href="/landingpage.html">Próximo</a></li>
-      <li><a href="/all-articles.html">Articles</a></li>
+      <li><a class="active" href="/all-articles.html">Articles</a></li>
       <li><a href="/about.html">About</a></li>
       <li><a href="/contact.html">Contact</a></li>
      
