--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!-- SEARCH ICON -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="/css/app.css">
     <link rel="stylesheet" href="/css/navigation.css">
@@ -24,7 +26,7 @@
       <li><a href="/landingpage.html">Próximo</a></li>
       <li><a href="/all-articles.html">Articles</a></li>
       <li><a href="/about.html">About</a></li>
-      <li><a href="/contact.html">Contact</a></li>
+      <li><a class="active" href="/contact.html">Contact</a></li>
      
 
     </ul>
