--- a/subscribe.html
+++ b/subscribe.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!-- SEARCH ICON -->
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
    
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="/css/app.css">
@@ -11,6 +13,8 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/filtering.css">
     <link rel="stylesheet" href="/css/subscribe.css">
+    <link rel="stylesheet" href="/css/searchbar.css">
+    <link rel="stylesheet" href="/css/searchbarplacement.css">
  
     <title>Próximo</title>
 </head>
