added admin panel to magazine

--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width-device-width, initial-scale=1">
-	<!--this sets the responsive layout-->
-	
 	<link href='/css/welcomepage.css' rel='stylesheet' type='text/css'>
 	<title>Vintage Lines</title>
 <body>
@@ -12,8 +10,8 @@
 		<h1><strong>P</strong>róximo<br><p>Music Magazine</p></h1>
   <div class="link-wrapper">
     <a href="/landingpage.html">Reader role</a>
-    <a href="#">Admin Content Editor role</a>
-    <a href="#">Admin Chief Editor role</a>
+    <a href="/login-admin.html">Admin Content Editor role</a>
+    <a href="/login-admin.html">Admin Chief Editor role</a>
   </div>
 </body>
 </head>
