--- a/thankyou.html
+++ b/thankyou.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/filtering.css">
     <link rel="stylesheet" href="/css/subscribe.css">
+    <link rel="stylesheet" href="/css/searchbar.css">
+    <link rel="stylesheet" href="/css/searchbarplacement.css">
   
     <title>Próximo</title>
 </head>
